[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/scorch_01.png" type="Texture" id=1]
[ext_resource path="res://player/ship/cannonball.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereShape" id=4]
radius = 1.2

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.996622 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.922852, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_align_y = true
direction = Vector3( 0, 22.233, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 13.28
initial_velocity_random = 1.0
scale = 50.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=10]
render_priority = 2
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=11]
material = SubResource( 10 )

[node name="Cannonball" type="KinematicBody"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
input_ray_pickable = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="Area" type="Area" parent="."]
collision_layer = 262144
collision_mask = 262144

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 64
lifetime = 0.34
one_shot = true
explosiveness = 1.0
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 11 )

[node name="KillTime" type="Timer" parent="."]
one_shot = true

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="KillTime" to="." method="_on_KillTime_timeout"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
